--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database=mysql
+spring.jpa.properties.hibernate.dialect
+spring.datasource.url=
+spring.datasource.username=kodilla
+spring.datasource.password=kodilla
