--- a/build.gradle
+++ b/build.gradle
@@ -22,11 +22,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
-	compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.13'
-    testImplementation('org.springframework.boot:spring-boot-starter-test') {
-        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-    }
-    implementation 'org.junit.jupiter:junit-jupiter'
+    compile 'mysql:mysql-connector-java'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.1.13.RELEASE'
+    testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
 
 test {
