--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'org.springframework.boot' version '2.1.13.RELEASE'
     id 'io.spring.dependency-management' version '1.0.9.RELEASE'
     id 'java'
+    id 'war'
 }
 
 group = 'com.kodilla'
@@ -25,6 +26,7 @@ dependencies {
     compile 'mysql:mysql-connector-java'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.1.13.RELEASE'
     testImplementation('org.springframework.boot:spring-boot-starter-test')
+    providedRuntime('org.springframework.boot:spring-boot-starter-tomcat')
 }
 
 test {
