--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     //compile 'mysql:mysql-connector-java'
-    compile group: 'postgresql', name: 'postgresql', version: '9.1-901-1.jdbc4'
+    compile ('org.postgresql:postgresql')
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.1.13.RELEASE'
     testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
