--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
-    //compile 'mysql:mysql-connector-java'
-    compile ('org.postgresql:postgresql')
+    compile 'mysql:mysql-connector-java'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.1.13.RELEASE'
     testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
